Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17698

MEMORY engine performance regression

    XMLWordPrintable

Details

    Description

      The regression benchmarks found a regression for mixed read/write workload and MEMORY tables. The following shows the last two good and the first two bad releases for each major version of the MariaDB server. From 10.2 onward there are no good releases any more.

      Test 't_oltp-memory-multi' - sysbench OLTP read/write
      32 Memory tables with 100K rows each
      numbers are queries per second
       
      #thread count           1       8       16      32      64      128     256
      mariadb-5.5.48          985.74  4912.4  7701.0  8719.2  8484.9  8441.0  8425.6
      mariadb-5.5.49          962.26  4532.4  7638.5  8332.6  8167.6  8143.0  8135.8
      mariadb-5.5.50          559.35  3036.3  5002.7  4960.6  5011.1  5019.3  5012.1
      mariadb-5.5.51          571.61  3576.5  5357.0  4830.9  4913.1  4912.8  4914.3
      ...
      mariadb-10.0.23         948.63  5292.5  7040.5  7106.2  7047.1  7037.4  7044.7
      mariadb-10.0.24         938.52  5259.6  6961.9  7021.9  7032.9  7034.6  7024.4
      mariadb-10.0.25         563.74  3536.8  5893.9  5786.6  5816.9  5797.2  5799.1
      mariadb-10.0.26         548.38  3516.5  6002.7  5807.9  5788.9  5780.5  5786.1
      ...
      mariadb-10.1.12         958.87  5353.0  6957.1  8403.9  7739.5  7749.0  7766.4
      mariadb-10.1.13         949.01  5510.0  7114.3  8458.5  8295.2  8216.3  8291.6
      mariadb-10.1.14         567.69  3743.1  6147.7  5653.2  5400.9  5439.1  5415.8
      mariadb-10.1.15         549.83  3580.7  5666.3  5267.9  5286.0  5340.9  5293.5
      ...
      mariadb-10.2.1          487.03  3116.2  4802.8  4393.1  4452.0  4446.7  4457.6
      mariadb-10.2.2          495.54  3065.3  4600.5  4423.6  4487.9  4488.6  4496.6
      ...
      mariadb-10.3.0          486.31  3070.2  5629.3  5160.6  5325.6  5308.0  5305.6
      mariadb-10.3.1          500.91  3278.9  5541.2  5335.6  5433.4  5430.5  5439.4
      ...
      mariadb-10.4.0          462.51  2641.8  5303.6  4985.9  5048.4  5045.9  5045.3
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              axel Axel Schwenke
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 1h
                  2d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.