MDEV-17698 MEMORY engine performance regression